--- a/package.json
+++ b/package.json
@@ -24,17 +24,21 @@
     },
     "dependencies": {
         "@headlessui/react": "^2.2.0",
+        "@hookform/resolvers": "^5.0.1",
         "@inertiajs/react": "^2.0.0",
+        "@radix-ui/react-alert-dialog": "^1.1.13",
         "@radix-ui/react-avatar": "^1.1.3",
         "@radix-ui/react-checkbox": "^1.1.4",
         "@radix-ui/react-collapsible": "^1.1.3",
         "@radix-ui/react-dialog": "^1.1.6",
         "@radix-ui/react-dropdown-menu": "^2.1.6",
-        "@radix-ui/react-label": "^2.1.2",
+        "@radix-ui/react-label": "^2.1.6",
         "@radix-ui/react-navigation-menu": "^1.2.5",
+        "@radix-ui/react-progress": "^1.1.6",
         "@radix-ui/react-select": "^2.1.6",
         "@radix-ui/react-separator": "^1.1.2",
-        "@radix-ui/react-slot": "^1.1.2",
+        "@radix-ui/react-slot": "^1.2.2",
+        "@radix-ui/react-switch": "^1.2.4",
         "@radix-ui/react-toggle": "^1.1.2",
         "@radix-ui/react-toggle-group": "^1.1.2",
         "@radix-ui/react-tooltip": "^1.1.8",
@@ -54,6 +58,8 @@
         "react": "^19.0.0",
         "react-dom": "^19.0.0",
         "react-fast-marquee": "^1.6.5",
+        "react-hook-form": "^7.56.2",
+        "resumablejs": "^1.1.0",
         "sonner": "^2.0.3",
         "tailwind-merge": "^3.0.1",
         "tailwindcss": "^4.0.0",
@@ -61,6 +67,7 @@
         "typescript": "^5.7.2",
         "usehooks-ts": "^3.1.1",
         "vite": "^6.0",
+        "zod": "^3.24.4",
         "zustand": "^5.0.3"
     },
     "optionalDependencies": {
