--- a/package.json
+++ b/package.json
@@ -41,11 +41,16 @@
         "@radix-ui/react-separator": "^1.1.2",
         "@radix-ui/react-slot": "^1.2.2",
         "@radix-ui/react-switch": "^1.2.4",
-        "@radix-ui/react-toggle": "^1.1.2",
+        "@radix-ui/react-toggle": "^1.1.8",
         "@radix-ui/react-toggle-group": "^1.1.2",
         "@radix-ui/react-tooltip": "^1.1.8",
         "@tailwindcss/vite": "^4.0.6",
         "@tanstack/react-table": "^8.21.3",
+        "@tiptap/extension-highlight": "^2.12.0",
+        "@tiptap/extension-text-align": "^2.12.0",
+        "@tiptap/pm": "^2.12.0",
+        "@tiptap/react": "^2.12.0",
+        "@tiptap/starter-kit": "^2.12.0",
         "@types/react": "^19.0.3",
         "@types/react-dom": "^19.0.2",
         "@uidotdev/usehooks": "^2.4.1",
