--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
         "embla-carousel-react": "^8.6.0",
         "framer-motion": "^12.10.0",
         "globals": "^15.14.0",
+        "html-react-parser": "^5.2.5",
         "laravel-vite-plugin": "^1.0",
         "lucide-react": "^0.475.0",
         "next-themes": "^0.4.6",
