--- a/package.json
+++ b/package.json
@@ -71,6 +71,7 @@
         "react-dom": "^19.0.0",
         "react-fast-marquee": "^1.6.5",
         "react-hook-form": "^7.56.2",
+        "react-select": "^5.10.1",
         "resumablejs": "^1.1.0",
         "sonner": "^2.0.3",
         "tailwind-merge": "^3.0.1",
