--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
         "@headlessui/react": "^2.2.0",
         "@hookform/resolvers": "^5.0.1",
         "@inertiajs/react": "^2.0.0",
+        "@lottiefiles/dotlottie-react": "^0.13.5",
         "@radix-ui/react-alert-dialog": "^1.1.13",
         "@radix-ui/react-avatar": "^1.1.3",
         "@radix-ui/react-checkbox": "^1.1.4",
