--- a/package.json
+++ b/package.json
@@ -73,6 +73,7 @@
         "react-fast-marquee": "^1.6.5",
         "react-hook-form": "^7.56.2",
         "react-select": "^5.10.1",
+        "recharts": "^2.15.3",
         "resumablejs": "^1.1.0",
         "sonner": "^2.0.3",
         "tailwind-merge": "^3.0.1",
